# stable-diffusion-webui

./: launch.sh  main.py  pyproject.toml  requirements_all.txt  requirements_uv.txt  setup.sh  sketch.ipynb
ImageBind/: imu_encoder.py  imu_encoder_example.py  imu_test.ipynb  requirements.txt
ImageBind/imagebind/imu/: imu_encoder.py  imu_encoder_example.py
modules/: img2img.py  processing.py  prompt_parser.py  sd_models.py  shared.py  shared_items.py  shared_options.py  txt2img.py  ui.py  ui_common.py  ui_prompt_styles.py  ui_toprow.py
modules/api/: api.py
scripts/: prompts_from_file.py
test/: test_img2img.py  test_txt2img.py
