[project]
name = "stable-diffusion-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.3.0",
    "accelerate==0.21.0",
    "aenum==3.1.16",
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.2",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==3.7.1",
    "appdirs==1.4.4",
    "apptools==5.3.1",
    "archspec==0.2.5",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "args==0.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "av==14.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "blendmodes==2022",
    "boltons==25.0.0",
    "brotli==1.1.0",
    "cartopy==0.24.1",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "clean-fid==0.1.35",
    "click==8.2.1",
    "clint==0.5.1",
    "clip",
    "colorama==0.4.6",
    "comm==0.2.2",
    "configobj==5.0.9",
    "contourpy==1.3.2",
    "coverage==7.8.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==4.4.2",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.6.1",
    "docker-pycreds==0.4.0",
    "dotdict==0.1",
    "einops==0.4.1",
    "envisage==7.0.4",
    "eva-decord==0.6.1",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "expecttest==0.2.1",
    "facexlib==0.3.0",
    "fastapi==0.94.0",
    "fastjsonschema==2.21.1",
    "ffmpy==0.5.0",
    "filelock==3.18.0",
    "filterpy==1.4.5",
    "fonttools==4.58.0",
    "fqdn==1.5.1",
    "frozendict==2.4.6",
    "frozenlist==1.6.0",
    "fsspec==2024.9.0",
    "ftfy==6.3.1",
    "fvcore==0.1.5.post20221221",
    "gdown==5.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.32",
    "gradio==3.41.2",
    "gradio-client==0.5.0",
    "grpcio==1.71.0",
    "h11==0.13.0",
    "h2==4.1.0",
    "h5py==3.12.1",
    "hf-xet==1.1.2",
    "hpack==4.0.0",
    "httpcore==0.18.0",
    "httpx==0.25.0",
    "huggingface-hub==0.32.2",
    "hydra-core==1.3.2",
    "hyperframe==6.1.0",
    "hypothesis==6.111.2",
    "idna==3.10",
    "imagebind",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "importlib-resources==6.5.2",
    "inflection==0.5.1",
    "inquirerpy==0.3.4",
    "iopath==0.1.10",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonmerge==1.8.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "kaleido==0.2.1",
    "kiwisolver==1.4.8",
    "kornia==0.6.7",
    "kornia-rs==0.1.9",
    "lark==1.1.2",
    "lazy-loader==0.4",
    "libarchive-c==5.3",
    "lief==0.16.6",
    "lightning-utilities==0.14.3",
    "lintrunner==0.12.5",
    "llvmlite==0.44.0",
    "loguru==0.7.2",
    "lpips==0.1.4",
    "mamba==0.11.3",
    "markdown==3.8",
    "markupsafe==2.1.5",
    "matplotlib==3.8.2",
    "matplotlib-inline==0.1.7",
    "mayavi==4.8.3",
    "mistune==3.1.3",
    "more-itertools==10.7.0",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "narwhals==1.41.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "ninja==1.11.1.1",
    "notebook==7.4.3",
    "notebook-shim==0.2.4",
    "numba==0.61.2",
    "numpy==1.26.2",
    "numpy-groupies==0.11.2",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.18.1",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.1.105",
    "omegaconf==2.2.3",
    "open-clip-torch==2.20.0",
    "opencv-python==4.8.1.78",
    "optree==0.12.1",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.1.4",
    "pandocfilters==1.5.1",
    "parameterized==0.9.0",
    "parso==0.8.4",
    "pathlib2==2.3.7.post1",
    "pexpect==4.9.0",
    "pfzy==0.3.4",
    "pickleshare==0.7.5",
    "piexif==1.1.3",
    "pillow==9.5.0",
    "pillow-avif-plugin==1.4.3",
    "pip==24.0",
    "pkginfo==1.12.1.2",
    "pkgutil-resolve-name==1.3.10",
    "platformdirs==4.3.8",
    "plotly==5.18.0",
    "pluggy==1.6.0",
    "portalocker==3.1.1",
    "proglog==0.1.12",
    "prometheus-client==0.22.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "protobuf==3.20.0",
    "psutil==5.9.5",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "puremagic==1.29",
    "pycosat==0.6.6",
    "pycparser==2.22",
    "pydantic==1.10.22",
    "pydub==0.25.1",
    "pyface==8.0.0",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pyproj==3.7.1",
    "pyshp==2.3.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-etcd==0.4.5",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytorch-lightning==1.9.4",
    "pytorch-msssim==1.0.0",
    "pytorchvideo",
    "pytz==2025.2",
    "pywavelets==1.8.0",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "resize-right==0.0.2",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.25.1",
    "ruamel-yaml==0.18.11",
    "ruamel-yaml-clib==0.2.12",
    "safetensors==0.4.2",
    "scikit-image==0.21.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "semantic-version==2.10.0",
    "send2trash==1.8.3",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.29.1",
    "setproctitle==1.3.6",
    "setuptools==69.5.1",
    "shapely==2.1.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "spandrel==0.3.4",
    "spandrel-extra-arches==0.1.1",
    "stack-data==0.6.3",
    "starlette==0.26.1",
    "sympy==1.13.2",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.1.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tifffile==2025.5.26",
    "timm==0.6.7",
    "tinycss2==1.4.0",
    "tokenizers==0.13.3",
    "tomesd==0.1.3",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchdiffeq==0.2.3",
    "torchelastic==0.2.2",
    "torchmetrics==1.7.1",
    "torchsde==0.2.6",
    "torchvision==0.16.2",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "traits==7.0.2",
    "traitsui==8.0.0",
    "trampoline==0.1.2",
    "transformers==4.30.2",
    "triton==2.1.0",
    "truststore==0.10.1",
    "types-dataclasses==0.6.6",
    "types-python-dateutil==2.9.0.20250516",
    "types-regex==2024.11.6.20250403",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.4.0",
    "uv==0.7.8",
    "uvicorn==0.34.2",
    "vtk==9.4.2",
    "wandb==0.16.1",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==11.0.3",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.14",
    "xformers==0.0.23.post1",
    "yacs==0.1.8",
    "yarl==1.20.0",
    "zipp==3.22.0",
    "zstandard==0.23.0",
]

[tool.uv.sources]
clip = { url = "https://github.com/openai/CLIP/archive/d50d76daa670286dd6cacf3bcd80b5e4823fc8e1.zip" }
imagebind = { path = "ImageBind" }
pytorchvideo = { git = "https://github.com/facebookresearch/pytorchvideo.git", rev = "28fe037d212663c6a24f373b94cc5d478c8c1a1d" }
